--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,7 @@
 	<meta name="viewport" content="width=720px, user-scalable=no">
 	<title>测试用例</title>
 
-	<!--build:css style/styles.min.css-->
 	<link rel="stylesheet" type="text/css" href="./style/main.css">
-	<!--endbuild-->
 </head>
 
 <body>
@@ -32,7 +30,7 @@
 	</section>
 </div>
 
-<form action="http://s.91wego.com/smartHome_1/setInitPwd" class="form-horizontal" id="addForm" method="post">
+<form action="#" class="form-horizontal" id="addForm" method="post">
 	<!-- 取值 -->
 	<section class="EQP_section EQP_show EQP_Height" id="EQP_1" style="height: 978px; display: block;">
 		<h1 class="EQP_name">请输入设备的初始密码和安全邮箱</h1>
@@ -105,11 +103,9 @@
 </form>
 
 
-<!--build:js scripts/main.min.js -->
 <script src="./scripts/zepto.js"></script>
 <script src="./scripts/iscroll-lite.js"></script>
 <script src="./scripts/main.js"></script>
-<!--endbuild-->
 
 
 </body>
